add working notebook

--- a/src/pyapp_notebook/example.ipynb
+++ b/src/pyapp_notebook/example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import seaborn as sns"
    ]
   },
   {
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame({\"A\": [1, 2, 3], \"B\": [4, 5, 6]})"
+    "# Apply the default theme\n",
+    "sns.set_theme()\n"
    ]
   },
   {
@@ -24,7 +25,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "# Load an example dataset\n",
+    "tips = sns.load_dataset(\"tips\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a visualization\n",
+    "sns.relplot(\n",
+    "    data=tips,\n",
+    "    x=\"total_bill\",\n",
+    "    y=\"tip\",\n",
+    "    col=\"time\",\n",
+    "    hue=\"smoker\",\n",
+    "    style=\"smoker\",\n",
+    "    size=\"size\",\n",
+    ")\n"
    ]
   }
  ],
